--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
         "@inertiajs/inertia-react": "^0.8.1",
         "gsap": "^3.12.5",
         "lottie-react": "^2.4.0",
